<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_inicio"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/navigation_listado"
        android:icon="@drawable/ic_listado"
        android:title="@string/title_listado" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_caida"
        android:icon="@drawable/ic_caida"
        android:title="@string/title_caida" />

    <item
        android:id="@+id/navigation_actividades"
        android:icon="@drawable/ic_actividades"
        android:title="@string/title_actividades" />

</menu>