<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inicio">

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="com.example.civicuc.ui.main.InicioFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_listado"
        android:name="com.example.civicuc.ui.main.ListadoFragment"
        android:label="@string/title_listado"
        tools:layout="@layout/fragment_listado" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.civicuc.ui.main.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_caida"
        android:name="com.example.civicuc.ui.main.caida.CaidaFragment"
        android:label="@string/title_caida"
        tools:layout="@layout/fragment_caida" />

    <fragment
        android:id="@+id/navigation_actividades"
        android:name="com.example.civicuc.ui.main.ActividadesFragment"
        android:label="@string/title_actividades"
        tools:layout="@layout/fragment_actividades" />

</navigation>