<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_acceso"
    app:startDestination="@+id/navigation_bienvenida">

    <fragment
        android:id="@+id/navigation_bienvenida"
        android:name="com.example.civicuc.ui.acceso.BienvenidaFragment"
        android:label="@string/title_bienvenida"
        tools:layout="@layout/fragment_bienvenida" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.civicuc.ui.acceso.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_registro"
        android:name="com.example.civicuc.ui.acceso.RegistroFragment"
        android:label="@string/title_registro"
        tools:layout="@layout/fragment_registro" />

</navigation>